Tried the gap fix on the content

--- a/less/template-styles.less
+++ b/less/template-styles.less
@@ -24,13 +24,13 @@ body {
 .template-content {
   border-left: 10px solid @border-color;
   border-right: 10px solid @border-color;
+  margin-bottom: -4px;
 }
 
 .template-footer {
   border-bottom: 10px solid @border-color;
   border-left: 10px solid @border-color;
   border-right: 10px solid @border-color;
-  margin-top: -4px;
 }
 
 
